SFUSA/force-app/main/default/objects/Account_Barrel_Recipe__c/fields/Account__c.field-meta.xml
<CustomField>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Recipes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>